...
      itemBuilder: (_) => const [
        PopupMenuItem(
          value: _GlobalHeaderMenuAction.profile,
          child: ListTile(
            contentPadding: EdgeInsets.zero,
            leading: Icon(Icons.settings_rounded),
            title: Text('Configurar perfil'),
          ),
        ),
        PopupMenuItem(
          value: _GlobalHeaderMenuAction.signOut,
          child: ListTile(
            contentPadding: EdgeInsets.zero,
...
